--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,101 @@
+/* tags-globais */
 
+.container{
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+img.responsive{
+    width: 100%;
+}
+
+/* resetar CSS */
+*{
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-family: Arial;
+    font-size: 18px;
+    font-weight: 300;
+    background: none;
+    list-style: none;
+}
+/* /resetar CSS */
+
+h1{
+    font-size: 24px;
+    font-weight: 700;
+}
+
+/* /tags-globais */
+
+/* header */
+
+header section{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header nav{
+    margin-bottom: 10px;
+}
+
+header nav.hamburguer button spam{
+    display: block;
+    width: 25px;
+    height: 4px;
+    background: #000;
+    margin-bottom: 4px;
+    
+}
+
+header #logo{
+    width: 200px;
+    margin-bottom: 10px;
+    display: block;
+}
+
+header nav.tools ul{
+    display: flex;
+}
+
+header nav.tools ul a{
+    padding: 7px;
+    color: rgb(73, 73, 73);
+    text-decoration: none;
+}
+
+header section.stories ul{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 40px;
+
+}
+
+header section.stories ul li{
+    width: 80%;
+}
+
+header section.stories ul li img{
+    border-radius: 100%;
+    border: 4px solid #000;
+
+}
+
+header section.stories ul li figcaption{
+    text-align: center;
+    padding-top: 20px;
+}
+
+
+
+
+/* /header */
+
+/* main */
+
+
+
+/* /main */
